# Databinding, ViewModel 구성

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -42,6 +42,8 @@
             android:id="@+id/search_keyword"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:viewModel="@{vm}"
+            app:data="@{vm.searchList}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
